--- a/trunk/MP-TVSeries/Resources/Languages/pl.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/pl.xml
@@ -14,23 +14,23 @@
   <string name="Mark_all_as_unwatched" Original="Mark all as unwatched">Zaznacz wszystkie jako nieobejrzane</string>
   <string name="Hide" Original="Hide">Ukryj</string>
   <string name="Delete" Original="Delete">Usuń</string>
-  <string name="Remove_series_from_Favourites" Original="Remove series from Favourites">Usuń serial z Ulubionych</string>
-  <string name="Add_series_to_Favourites" Original="Add series to Favourites">Dodaj Serial do Ulubionych</string>
+  <string name="Remove_series_from_Favourites" Original="Remove series from Favourites">Usuń z Ulubionych</string>
+  <string name="Add_series_to_Favourites" Original="Add series to Favourites">Dodaj do Ulubionych</string>
   <string name="Force_Local_Scan" Original="Force Local Scan ">Odśwież pliki lokalne</string>
   <string name="Force_Online_Refresh" Original="Force Online Refresh ">Odśwież informacje z sieci</string>
   <string name="In_Progress_with_Barracks" Original="(In Progress)">(w trakcie)</string>
   <string name="Hide_summary_on_unwatched" Original="Hide the episode's summary on unwatched episodes">Ukryj opis dla nieobejrzanych odcinków</string>
   <string name="on" Original="on">włączone</string>
   <string name="off" Original="off">wyłączone</string>
-  <string name="Play_Random_Episode" Original="Play Random Episode">Odtwórz przypadkowy odcinek</string>
-  <string name="Play_Random_First_Unwatched_Episode" Original="Play Random First Unwatched Episode">Odtwórz przypadkowy pierwszy nieoglądany odcinek</string>
+  <string name="Play_Random_Episode" Original="Play Random Episode">Odtwórz losowy odcinek</string>
+  <string name="Play_Random_First_Unwatched_Episode" Original="Play Random First Unwatched Episode">Odtwórz losowy pierwszy nieoglądany odcinek</string>
   <string name="Delete_that_series" Original="Delete that series?">Usunąć ten serial?</string>
   <string name="Delete_that_season" Original="Delete that season?">Usunąć ten sezon?</string>
   <string name="Delete_that_episode" Original="Delete that episode?">Usunąć ten odcinek?</string>
   <string name="Confirm" Original="Confirm">Potwierdź</string>
   <string name="Completed" Original="Completed">Zakończono</string>
-  <string name="No_subtitles_found" Original="No subtitles found">Brak napisów</string>
-  <string name="CFS_No_Results_Found" Original="No Results Found!">brak wyników!</string>
+  <string name="No_subtitles_found" Original="No subtitles found">Nie znaleziono napisów</string>
+  <string name="CFS_No_Results_Found" Original="No Results Found!">Nic nie znaleziono!</string>
   <string name="_Hidden_to_prevent_spoilers_" Original=" * Hidden to prevent spoilers *">* Opis ukryty by nie zdradzać treści *</string>
   <string name="Yes" Original="Yes">Tak</string>
   <string name="No" Original="No">Nie</string>
@@ -40,19 +40,19 @@
   <string name="wrongSkin" Original="Wrong Skin file">Błędny plik skóry</string>
   <string name="special" Original="Special">Dodatek</string>
   <string name="specials" Original="Specials">Dodatki</string>
-  <string name="delPhyiscalWarning" Original="You are about to permanently delete {0} physical file(s).Would you like to proceed?">Masz zamiar trwale usunąć {0} plik/ów.\nCzy na pewno?</string>
-  <string name="Force_Online_Match" Original="Force New Online Lookup For Series">Wymuś dopasowanie z sieci</string>
+  <string name="delPhyiscalWarning" Original="You are about to permanently delete {0} physical file(s).Would you like to proceed?">Masz zamiar trwale usunąć {0} plik(ów).\nKontynuować?</string>
+  <string name="Force_Online_Match" Original="Force New Online Lookup For Series">Wymuś wyszukiwanie w sieci dla serialu</string>
   <string name="Load_via_NewsLeecher" Original="Load via NewsLeecher">Pobierz przez NewsLeecher</string>
   <string name="Download" Original="Download">Pobierz</string>
   <string name="Actions" Original="Actions">Operacje</string>
   <string name="Options" Original="Options">Opcje</string>
   <string name="Genres" Original="Genres">Gatunki</string>
   <string name="All" Original="All">Wszystkie</string>
-  <string name="Latest" Original="Latest Aired">Najnowsze</string>
+  <string name="Latest" Original="Latest Aired">Ostatnio emitowane</string>
   <string name="Channels" Original="Channels">Kanały</string>
   <string name="Unwatched" Original="Unwatched">Nieobejrzane</string>
   <string name="Favourites" Original="Favourites">Ulubione</string>
-  <string name="updateMI" Original="Update Mediainfo of local file">Zaktualizuj informacje o pliku lokalnym</string>
+  <string name="updateMI" Original="Update Mediainfo of local file">Zaktualizuj informacje o plikach</string>
   <string name="RateSeries" Original="Rate this Series">Oceń ten serial</string>
   <string name="RateEpisode" Original="Rate this Episode">Oceń ten odcinek</string>
   <string name="ResetRating" Original="Reset Rating">Usuń oceny</string>
@@ -71,28 +71,28 @@
   <string name="FanDownloadingStatus" Original="Downloading {0} Fanart...">Pobieranie {0} fanart\'u(ów)...</string>
   <string name="FanArtLocal" Original="Local">Dostępny lokalnie</string>
   <string name="FanArtOnline" Original="Remote">Dostępny do pobrania</string>
-  <string name="FanArtOnlineLoading" Original="Loading {0} of {1} Fanart...">ładuję {0} z {1} fanart\'u(ów)...</string>
+  <string name="FanArtOnlineLoading" Original="Loading {0} of {1} Fanart...">Ładuję {0} z {1} fanart\'u(ów)...</string>
   <string name="FanArtRandom" Original="Display random Fanart">Wyświetl losowy fanart</string>
   <string name="FanArtNoneFound" Original="No Fanart could be found">Nie znaleziono fanartu(ów)</string>
   <string name="CFS_Choose_Item" Original="Choose item">Wybierz</string>
   <string name="CFS_Select_Matching_Item" Original="Select matching item:">Wybierz pasujący:</string>
   <string name="CFS_Search_Again" Original="Search again">Szukaj ponownie</string>
   <string name="CFS_Select_Matching_Subitle_File" Original="Select Matching Subtitle File">Wybierz pasujący plik z napisami</string>
-  <string name="CFS_Subtitle_Episode" Original="Choose item">Wybierz</string>
-  <string name="CFS_Matching_Subtitles" Original="Matching Subtitles">Dopasowywanie napisów</string>
+  <string name="CFS_Subtitle_Episode" Original="Choose item">Odcinek:</string>
+  <string name="CFS_Matching_Subtitles" Original="Matching Subtitles">Pasujących napisów</string>
   <string name="CFS_Choose_Correct_Series" Original="Choose Correct Series">Wybierz właściwy serial</string>
   <string name="CFS_Available_Series" Original="Available Series">Dostępne seriale</string>
   <string name="CFS_Select_Correct_Subtitle_Version" Original="Select desired subtitles version">Wybierz wersję napisów</string>
   <string name="CFS_Select_Version" Original="Version:">Wersja:</string>
   <string name="CFS_Choose_Correct_Episode" Original="Choose Correct Episode">Wybierz właściwy odcinek</string>
-  <string name="CFS_Local_Episode_Index" Original="Local Episiode index:">Indeks lokalnego odcinka:</string>
+  <string name="CFS_Local_Episode_Index" Original="Local Episiode index:">Lokalny indeks odcinka:</string>
   <string name="CFS_Available_Episode_List" Original="Available Episode list:">Lista dostępnych odcinków:</string>
   <string name="CFS_Choose_Search_Site" Original="Choose search site:">Wybierz stronę wyszukiwania:</string>
   <string name="CFS_List_Search_Site" Original="List of search sites:">Lista stron wyszukiwania:</string>
   <string name="CFS_Found_Torrents" Original="Found torrents:">Znalezione torrenty:</string>
-  <string name="CFS_Looking_For" Original="Looking for:">Szukanie:</string>
+  <string name="CFS_Looking_For" Original="Looking for:">Wyszukiwanie:</string>
   <string name="CFS_Choose_Correct_Season" Original="Choose correct season">Wybierz właściwy sezon</string>
-  <string name="CFS_Local_Season_Index" Original="Local Season index:">Indeks lokalnego sezonu:</string>
+  <string name="CFS_Local_Season_Index" Original="Local Season index:">Lokalny indeks sezonu:</string>
   <string name="CFS_Available_Seasons" Original="Available Seasons list:">Lista dostępnych sezonów:</string>
   <string name="CFS_Skip_Never_Ask_Again" Original="Skip / Never Ask Again">Pomiń / Nigdy więcej nie pytaj</string>
   <string name="CYN_Subtitle_File_Replace" Original="Subtitle File Replace">Zamień plik z napisami</string>
@@ -102,7 +102,7 @@
   <string name="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
   <string name="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Identyfikator konta nie ustawiony</string>
   <string name="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Wpisz identyfikator konta w konfiguracji</string>
-  <string name="ChangeLayout" Original="Change Layout">Zmień wygląd</string>
+  <string name="ChangeLayout" Original="Change Layout">Zmień układ</string>
   <string name="UseOnlineFavourites" Original="Use Online Favourites">Użyj ulubionych z sieci</string>
   <string name="AddToPlaylist" Original="Add To Playlist">Dodaj do Listy Odtwarzania</string>
   <string name="FanartDisableLabel" Original="Disabled">Wyłączony</string>
@@ -124,9 +124,9 @@
   <string name="FanArtFilter" Original="Filter">Filtr</string>
   <string name="FanArtFilterAll" Original="All">Wszystkie</string>
   <string name="ButtonRandomFanart" Original="Random Fanart">Losowy fanart</string>
-  <string name="LabelResolution" Original="Resolution">Rozdzielczość:</string>
-  <string name="LabelChosen" Original="Chosen">Wybrano:</string>
-  <string name="LabelDisabled" Original="Disabled">Wyłączone:</string>
+  <string name="LabelResolution" Original="Resolution">Rozdzielczość</string>
+  <string name="LabelChosen" Original="Chosen">Domyślny</string>
+  <string name="LabelDisabled" Original="Disabled">Wyłączony</string>
   <string name="ResetUserSelections" Original="Reset User Selections">Resetuj wybór użytkownika</string>
   <string name="DeleteFromDisk" Original="Delete from Disk">Usuń z dysku</string>
   <string name="DeleteFromDatabase" Original="Delete from Database">Usuń z bazy</string>
@@ -152,12 +152,12 @@
   <string name="RateTenStarTen" Original="Perfect">Doskonały</string>
   <string name="ContentRating" Original="Content Rating">Ocena zawartości</string>
   <string name="ViewTags" Original="View Tags">Widok etykiet</string>
-  <string name="AddViewTag" Original="Add Series to View Tag">Dodaj serial do znacznika widoku</string>
-  <string name="RemoveViewTag" Original="Remove Series from View Tag">Usuń serial ze znacznika widoku</string>
-  <string name="NewViewTag" Original="New Tag">Nowy znacznik widoku</string>
-  <string name="CycleSeriesBanner" Original="Cycle Series Banner">Zmień baner serialu</string>
-  <string name="CycleSeasonBanner" Original="Cycle Season Poster">Zmień okładkę sezonu</string>
-  <string name="CycleSeriesPoster" Original="Cycle Series Poster">Zmień okładkę serialu</string>
+  <string name="AddViewTag" Original="Add Series to View Tag">Dodaj serial do widoku</string>
+  <string name="RemoveViewTag" Original="Remove Series from View Tag">Usuń serial z widoku</string>
+  <string name="NewViewTag" Original="New Tag">Nowy widok</string>
+  <string name="CycleSeriesBanner" Original="Cycle Series Banner">Zmieniaj baner serialu</string>
+  <string name="CycleSeasonBanner" Original="Cycle Season Poster">Zmieniaj okładkę sezonu</string>
+  <string name="CycleSeriesPoster" Original="Cycle Series Poster">Zmieniaj okładkę serialu</string>
   <string name="FanartRandomInterval" Original="Fanart Timer Interval">Czas zmiany fanartów</string>
   <string name="FanartIntervalFiveSeconds" Original="5 Seconds">5 sekund</string>
   <string name="FanartIntervalTenSeconds" Original="10 Seconds">10 sekund</string>
@@ -175,15 +175,15 @@
   <string name="PinCodeDlgLabel2" Original="Enter in 4 Digit Pin Code to proceed:">Wprowadź czteroznakowy kod PIN aby kontynuować:</string>
   <string name="PinCodeMessageIncorrect" Original="Pin Incorrect">Nieprawidłowy PIN</string>
   <string name="Continuing" Original="Continuing Series">Serial wciąż emitowany</string>
-  <string name="Ended" Original="Ended Series">Serial już nieemitowany</string>
+  <string name="Ended" Original="Ended Series">Emisja zakończona</string>
   <string name="HighDefinition" Original="High Definition">Jakość HD</string>
   <string name="StandardDefinition" Original="Standard Defintion">Jakość SD</string>
-  <string name="Top10Online" Original="Top 10 (Online)">Najlepsza 10 (z sieci)</string>
-  <string name="Top10User" Original="Top 10 (User)">Najlepsza 10 (użytkownika)</string>
-  <string name="Top25Online" Original="Top 25 (Online)">Najlepsza 25 (z sieci)</string>
-  <string name="Top25User" Original="Top 25 (User)">Najlepsza 25 (użytkownika)</string>
+  <string name="Top10Online" Original="Top 10 (Online)">Najlepsze 10 (z sieci)</string>
+  <string name="Top10User" Original="Top 10 (User)">Najlepsze 10 (użytkownika)</string>
+  <string name="Top25Online" Original="Top 25 (Online)">Najlepsze 25 (z sieci)</string>
+  <string name="Top25User" Original="Top 25 (User)">Najlepsze 25 (użytkownika)</string>
   <string name="Subtitles" Original="Subtitles">Napisy</string>
-  <string name="MultiAudio" Original="Multiple Audio Tracks">Wiele ścieżek dźwięku</string>
+  <string name="MultiAudio" Original="Multiple Audio Tracks">Ścieżki dźwiękowe</string>
   <string name="OnlineFavourites" Original="Online Favourites">Ulubione z sieci</string>
   <string name="Actors" Original="Actors">Aktorzy</string>
   <string name="RemovableMedia" Original="Removable Media">Nośnik wymienny</string>
@@ -213,7 +213,7 @@
   <string name="Groups" Original="Groups">Grupy</string>
   <string name="GuestStar" Original="Guest Star">Gość odcinka</string>
   <string name="GuestStars" Original="Guest Stars">Goście odcinka</string>
-  <string name="MediaInfo" Original="Media Info">Onformacja o Mediach</string>
+  <string name="MediaInfo" Original="Media Info">Onformacja o pliku</string>
   <string name="Minutes" Original="Minutes">Minuty</string>
   <string name="MyRating" Original="My Rating">Moja ocena</string>
   <string name="Network" Original="Network">Sieć</string>
@@ -229,10 +229,10 @@
   <string name="TVDB_ERROR_UNAVAILABLE_1" Original="TheTVDB.com is currently unavailable">Strona TVDB.com jest obecnie niedostępna</string>
   <string name="TVDB_ERROR_UNAVAILABLE_2" Original="Please try again later">Spróbuj ponownie później</string>
   <string name="NETWORK_ERROR_UNAVAILABLE_1" Original="Network connection is unavailable">Połączenie sieciowe jest niedostępne</string>
-  <string name="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Sprawdź połączenia i spróbuj ponownie</string>
+  <string name="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Sprawdź połączenie i spróbuj ponownie</string>
   <string name="Playlist" Original="Playlist">Lista Odtwarzania</string>
-  <string name="LastOnlineUpdate" Original="LastOnlineUpdate">Ostatnia aktualizacja w sieci</string>
-  <string name="ResetIgnoredDownloadedFiles" Original="Reset Ignored Downloaded Files">Wyczyść listę ignorowanych plików z sieci</string>
+  <string name="LastOnlineUpdate" Original="LastOnlineUpdate">Ostatnia aktualizacja z sieci</string>
+  <string name="ResetIgnoredDownloadedFiles" Original="Reset Ignored Downloaded Files">Resetuj listę ignorowanych plików z sieci</string>
   <string name="GetSubtitlesFrom" Original="Get subtitles from?">Pobrać napisy z?</string>
   <string name="EnabledSubtitleSites" Original="Enabled subtitle sites:">Aktywne strony z napisami:</string>
   <string name="PlayNow" Original="Play Now">Odtwórz teraz</string>
@@ -272,7 +272,7 @@
   <string name="CFS_Local_Series" Original="Local Series:">Lokalne seriale:</string>
   <string name="AvailableMedia" Original="Available Media">Dostępny nośnik</string>
   <string name="Votes" Original="votes">głosy</string>
-  <string name="LayoutCoveflow" Original="Coveflow">Okładki</string>
+  <string name="LayoutCoveflow" Original="Coveflow">Przeźrocza</string>
   <string name="ResumeEpisode" Original="Resume episode from last time?">Wznowić odcinek od ostatniego miejsca?</string>
   <string name="SummaryNotAvailable" Original="No summary is currently available.">Brak podsumowania.</string>
   <string name="Timeout" Original="Timeout">Przekroczony limit czasu</string>
@@ -280,10 +280,36 @@
   <string name="GettingActors" Original="Getting Actors from Online">Pobieranie aktorów z sieci</string>
   <string name="ShowAllEpisodes" Original="Show all Episodes">Pokaż wszystkie odcinki</string>
   <string name="DownloadAllEpisodeInfo" Original="Download All Episode Info">Pobierz informacje dla wszystkich odcinków</string>
+  <string name="Calendar" Original="Calendar">Kalendarz</string>
+  <string name="Recommendations" Original="Recommendations">Rekomendacje</string>
+  <string name="Trending" Original="Trending">Na czasie</string>
+  <string name="WatchList" Original="WatchList">Lista oczekiwanych</string>
+  <string name="Shouts" Original="Shouts">Na topie</string>
+  <string name="MainMenu" Original="Main Menu">Główne menu</string>
+  <string name="AddToWatchList" Original="Add {0} to Watchlist">Dodaj {0} do listy oczekiwanych</string>
+  <string name="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">Nie możesz wykonać tej operacji nie będąc\nzalogowanym. Chcesz się zarejestrować\nlub zalogować na trakt.tv teraz?</string>
+  <string name="RelatedSeries" Original="RelatedSeries">Podobne seriale</string>
+  <string name="SearchTorrent" Original="Torrent Search">Wyszukiwanie w torrentach</string>
+  <string name="SearchNZB" Original="NZB Search">Wyszukiwanie w NZB</string>
+  <string name="SearchActorInMovies" Original="Search for Actor in Movies">Wyszukaj aktorów w filmach</string>
+  <string name="AddToCustomList" Original="Add {0} to Custom List...">Dodaj {0} do własnej listy...</string>
+  <string name="insertDisk" Original="Please insert Disk">Proszę włożyć dysk</string>
   <string name="InsertDiskMessage1" Original="The media for the episode you have selected">Nośnik zawierający wybrany odcinek</string>
   <string name="InsertDiskMessage2" Original="is currently not available.">jet obecnie niedostępny.</string>
   <string name="InsertDiskMessage3" Original="Please insert or connect media">Włóż lub podłącz nośnik</string>
   <string name="InsertDiskMessage4" Original="labeled: {0}">oznaczony: {0}</string>
   <string name="OK" Original="OK">OK</string>
   <string name="Cancel" Original="Cancel">Anuluj</string>
+  <string name="Ignore" Original="Ignore">ignoruj</string>
+  <string name="CycleSeriesThumb" Original="Cycle Series Panel">Zmień panel serialu</string>
+  <string name="Update" Original="Update">Aktualizuj</string>
+  <string name="ViewTagExistsMessage" Original="The view '{0}' already exists">Widok \'{0}\' już istnieje</string>
+  <string name="LayoutListThumbs" Original="List Panels">Lista paneli</string>
+  <string name="LayoutCoverflow" Original="Coverflow">Przeźrocza</string>
+  <string name="Warning" Original="Warning">Ostrzeżenie</string>
+  <string name="PlaybackOutOfOrderLine1" Original="The next unwatched episode is:">Jeszcze nie obejrzałeś/zebrałeś</string>
+  <string name="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">Na pewno chcesz kontynuować?</string>
+  <string name="Filters" Original="Filters">Filtry</string>
+  <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Nieobejrzane odcinki</string>
+  <string name="AllEpisodes" Original="All Episodes">Wszystkie odcinki</string>
 </resources>
