--- a/trunk/MP-TVSeries/Resources/Languages/it.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/it.xml
@@ -312,4 +312,5 @@
   <string name="Filters" Original="Filters">Filtri</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Episodi non visti</string>
   <string name="AllEpisodes" Original="All Episodes">Tutti gli episodi</string>
+  <string name="Biography" Original="Biography">Biografia</string>
 </resources>
