--- a/trunk/MP-TVSeries/Resources/Languages/sl.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/sl.xml
@@ -312,4 +312,5 @@
   <string name="Filters" Original="Filters">Filtri</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Neogledane epizode</string>
   <string name="AllEpisodes" Original="All Episodes">Vse epizode</string>
+  <string name="Biography" Original="Biography">Življenjepis</string>
 </resources>
