--- a/trunk/MP-TVSeries/Resources/Languages/sv.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/sv.xml
@@ -312,4 +312,5 @@
   <string name="Filters" Original="Filters">Filter</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Osedda avsnitt</string>
   <string name="AllEpisodes" Original="All Episodes">Alla avsnitt</string>
+  <string name="Biography" Original="Biography">Biografi</string>
 </resources>
