--- a/trunk/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/en-US.xml
@@ -249,9 +249,10 @@
   <string name="UnableToDeleteFile" Original="Unable to Delete File: {0}">Unable to Delete File: {0}</string>
   <string name="PlaySomething" Original="Play...">Play...</string>
   <string name="PlayError" Original="Play error">Play error</string>
-  <string name="RandomEpisode" Original="random episode">random episode</string>
-  <string name="FirstUnwatchedEpisode" Original="first unwatched episode">first unwatched episode</string>
-  <string name="RandomUnwatchedEpisode" Original="random unwatched episode">random unwatched episode</string>
+  <string name="RandomEpisode" Original="Random episode">Random episode</string>
+  <string name="FirstUnwatchedEpisode" Original="First unwatched episode">First unwatched episode</string>
+  <string name="FirstUnwatchedEpisodeOtherwiseRandom" Original="First unwatched episode otherwise random">First unwatched episode otherwise random</string>
+  <string name="RandomUnwatchedEpisode" Original="Random unwatched episode">Random unwatched episode</string>
   <string name="LatestEpisode" Original="latest episode">latest episode</string>
   <string name="UnableToFindAny" Original="Unable to find any {0}">Unable to find any {0}</string>
   <string name="UnableToFindAnyEpisode" Original="Unable to find any episode">Unable to find any episode</string>
